syntax = "proto3";

option go_package = "protobuf/article";

message Article {
    int64 id = 1;
    string title = 2;
    string description =3;
    string content = 4;
    string cover_image = 5;
    int64 publish_at = 6;
}

service ArticleService {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Find(FindRequest) returns (FindResponse) {}
    rpc Search(SearchRequest) returns (SearchResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest{
    string title = 1;
    string description =2;
    string content = 3;
    string cover_image = 4;
    int64 publish_at = 5;
}

message CreateResponse{
    Article article = 1;
}

message UpdateRequest {
    int64 id = 1;
    string title = 2;
    string description =3;
    string content = 4;
    string cover_image = 5;
}

message UpdateResponse {
    Article article = 1;
}

message FindRequest {
    int64 id = 1;
}

message FindResponse {
    Article article = 1;
}

message SearchRequest {
    string input = 1;
}

message SearchResponse {
    repeated Article articles = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {}